--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragment.mainFragments.both.homeFragment.HomeFragment">
+
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.mainFragments.both.homeFragment.HomeFragment">
+    >
     
     <ImageView
         android:id="@+id/imageComproIcon"
@@ -42,10 +54,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewHomePage"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         tools:listitem="@layout/layout_home_page"
         android:layout_marginVertical="@dimen/_10sdp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+       android:nestedScrollingEnabled="false"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/etSearchBar"
         app:layout_constraintBottom_toBottomOf="parent"/>
@@ -54,3 +67,6 @@
     
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.core.widget.NestedScrollView>
