--- a/app/src/main/res/layout/bottom_add_experience.xml
+++ b/app/src/main/res/layout/bottom_add_experience.xml
@@ -270,7 +270,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textStartDate">
 
 
-        <EditText
+        <TextView
             android:id="@+id/etStartDate"
             android:layout_width="@dimen/_90sdp"
             android:layout_height="wrap_content"
@@ -315,7 +315,7 @@
         app:layout_constraintStart_toEndOf="@+id/cvLocation"
         app:layout_constraintTop_toBottomOf="@+id/textEndDate">
 
-        <EditText
+        <TextView
             android:id="@+id/etEndDate"
             android:layout_width="@dimen/_90sdp"
             android:layout_height="wrap_content"
