--- a/app/src/main/res/layout/fragment_preview_profile.xml
+++ b/app/src/main/res/layout/fragment_preview_profile.xml
@@ -200,7 +200,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/clProfessionalExperience"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_215sdp"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_7sdp"
                 android:background="@drawable/black_line_bg"
                 android:padding="@dimen/_15sdp"
@@ -211,7 +211,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:overScrollMode="never"
-                    android:orientation="vertical"
+                    android:orientation="horizontal"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -225,7 +225,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/clEducation"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_190sdp"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_7sdp"
                 android:background="@drawable/black_line_bg"
                 android:padding="@dimen/_15sdp"
@@ -235,9 +235,8 @@
                     android:id="@+id/recyclerViewEducation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxHeight="@dimen/_210sdp"
                     android:overScrollMode="never"
-                    android:orientation="vertical"
+                    android:orientation="horizontal"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -423,7 +422,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:overScrollMode="never"
-                    android:orientation="vertical"
+                    android:orientation="horizontal"
                     tools:listitem="@layout/layout_preview_certificate"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
